监控功能以及其他功能的完善
